[gd_scene load_steps=34 format=2]

[ext_resource path="res://images/explosion/0018.png" type="Texture" id=1]
[ext_resource path="res://images/explosion/0017.png" type="Texture" id=2]
[ext_resource path="res://images/explosion/0004.png" type="Texture" id=3]
[ext_resource path="res://images/explosion/0000.png" type="Texture" id=4]
[ext_resource path="res://images/explosion/0005.png" type="Texture" id=5]
[ext_resource path="res://images/explosion/0015.png" type="Texture" id=6]
[ext_resource path="res://images/explosion/0013.png" type="Texture" id=7]
[ext_resource path="res://images/explosion/0010.png" type="Texture" id=8]
[ext_resource path="res://images/explosion/0002.png" type="Texture" id=9]
[ext_resource path="res://images/explosion/0008.png" type="Texture" id=10]
[ext_resource path="res://images/explosion/0003.png" type="Texture" id=11]
[ext_resource path="res://images/explosion/0011.png" type="Texture" id=12]
[ext_resource path="res://images/explosion/0006.png" type="Texture" id=13]
[ext_resource path="res://images/explosion/0007.png" type="Texture" id=14]
[ext_resource path="res://images/explosion/0012.png" type="Texture" id=15]
[ext_resource path="res://images/explosion/0009.png" type="Texture" id=16]
[ext_resource path="res://images/explosion/0019.png" type="Texture" id=17]
[ext_resource path="res://images/explosion/0016.png" type="Texture" id=18]
[ext_resource path="res://images/explosion/0014.png" type="Texture" id=19]
[ext_resource path="res://images/explosion/0001.png" type="Texture" id=20]
[ext_resource path="res://sounds/explosion.mp3" type="AudioStream" id=21]
[ext_resource path="res://scenes/entities/explosions/Explosion.gd" type="Script" id=22]
[ext_resource path="res://scenes/bits/Particles.gd" type="Script" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 20 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 16 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 7 ), ExtResource( 19 ), ExtResource( 6 ), ExtResource( 18 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 17 ) ],
"loop": false,
"name": "default",
"speed": 50.0
} ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.0983607, 0.553279, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.925781, 0, 1, 1, 0, 0, 1, 0.285156, 0, 0, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=9]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 200 ), 0.0, 0.0, 0, 0, Vector2( 0.0299626, -1.36365 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.53
emission_shape = 5
emission_ring_radius = 1.35
emission_ring_inner_radius = 1.3
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_align_y = true
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 2.0
radial_accel_random = 1.0
radial_accel_curve = SubResource( 10 )
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=7]
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="QuadMesh" id=8]
material = SubResource( 7 )
size = Vector2( 0.08, 0.1 )

[node name="Explosion" type="Spatial"]
script = ExtResource( 22 )

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
bus = "SFX"

[node name="ExplosionAnimation" type="AnimatedSprite3D" parent="."]
transform = Transform( 0.3, 0, 0, 0, -1.31134e-08, -0.3, 0, 0.3, -1.31134e-08, 0, 0, 0 )
frames = SubResource( 1 )

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
emitting = false
amount = 256
lifetime = 2.5
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 8 )
script = ExtResource( 23 )

[connection signal="animation_finished" from="ExplosionAnimation" to="." method="_on_ExplosionAnimation_animation_finished"]
